--- a/main.css
+++ b/main.css
@@ -18,33 +18,35 @@ body{
   justify-content: space-around;
   align-items: center;
 }
-.a1-1{
+.gmail{
   width: 60px;
   height: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.a1-2{
+.images{
   width: 80px;
   height: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.a1-3{
+.outils{
   width: 20px;
   height: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.a1-4{
+.connexion{
   width: 80px;
-  height: 20px;
+  height: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgb(0, 143, 245);
+  border-radius: 5%;
 }
 
 
@@ -62,7 +64,7 @@ body{
   flex-direction: column;
   align-items: center;
 }
-.b1-1{
+.logo{
   width: 600px;
   height: 150px;
   display: flex;
@@ -71,35 +73,50 @@ body{
 img{
   height: 150px;
 }
-.b1-2{
-
+.recherche{
   width: 600px;
   height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.b1-3{
+.borderRadius{
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 70px;
+  opacity: .55;
+  width: 600px;
+}
+.boutons{
   width: 300px;
   height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.style{
+  border: 0px;
+  width: 580px;
+}
 button{
   margin: 10px;
+  background-color: #f2f2f2;
+  border-radius: 10%;
 }
 .c{
   width: 1890px;
   height: 60px;
   background-color: #f2f2f2;
 }
-.c1{
+.france{
+  font: black;
+  opacity: 0.55;
   width: 80px;
   height: 60px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  margin-left: 5px;
 }
 
 .d{
@@ -117,28 +134,28 @@ button{
   align-items: center;
 }
 
-.d1-1{
-  width: 70px;
-  height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}.d1-2
-{
+.pub{
   width: 70px;
   height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.d1-3{
+.entreprise{
   width: 70px;
   height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.d1-4{
+.aPropos{
+  width: 70px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.fonctionne{
   width: 350px;
   height: 60px;
   display: flex;
@@ -152,28 +169,28 @@ button{
   justify-content: center;
   text-align: center;
 }
-.d2-1{
+.info{
   width: 150px;
   height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.d2-2{
+.confidentialite{
   width: 150px;
   height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.d2-3{
+.conditions{
   width: 150px;
   height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.d2-4{
+.parametre{
   width: 90px;
   height: 60px;
   display: flex;
@@ -181,14 +198,9 @@ button{
   align-items: center;
 }
 .border{
-  border: 4px black solid;*/
+  /*border: 4px black solid;*/
 }
-.borderRadius{
-  border: 1px solid black;
-  padding: 10px;
-  border-radius: 70px;
-  opacity: .55;
-}
+
 a:link{
   text-decoration: none;
   color: black;
